# ffte

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO  main.c
lib/: install_cmake.ps1  install_googletest.ps1  install_mingw.ps1  install_plplot.ps1
lib/linux/: install_cmake.sh  install_gcc.sh  install_googletest.sh  install_plplot.sh
lib/windows/: install_cmake.ps1  install_googletest.ps1  install_mingw.ps1  install_plplot.ps1
matlab/fft_bluestein/: fft_bluestein.m  fft_bluestein_nocmplx.m  test.m
matlab/lu_factorization/: doolittleLU.m  test.m
src/: ffte.c  ffte.h  ffte2d.c
src/c/: ffte.c  ffte.h  ffte2d.c
src/c/ffte/: complex.c  ffte_bluestein.c  ffte_cooleytukey.c  subfuncs.h
src/cpp/: ffte.cpp  ffte.hpp  ffte2d.cpp  ffte2d_dynfix.cpp  ffte_dynfix.cpp  ffte_dynfix.hpp
src/cpp/ffte/: complex.cpp  dynfix.cpp  dynfix_complex.cpp  ffte_bluestein.cpp  ffte_bluestein_dynfix.cpp  ffte_complex.cpp  ffte_complex.hpp  ffte_cooleytukey.cpp  ffte_cooleytukey_dynfix.cpp  subfuncs.hpp
src/cpp/ffte_dynfix/: dynfix.cpp  dynfix_complex.cpp  ffte_bluestein_dynfix.cpp  ffte_cooleytukey_dynfix.cpp  subfuncs.hpp
src/ffte/: compex.c  complex.c  ffte_blocks.h  ffte_bluestein.c  ffte_cooleytukey.c  funcs.h  subfuncs.h
src/ffte/base/: ffte_bluestein.c  ffte_cooleytukey.c
src/ffte/posix/: ffte_bluestein.c  ffte_cooleytukey.c
src/ffte/posix_avx/: ffte_bluestein.c  ffte_cooleytukey.c
src/math/: avx_trigonometry.c  complex.c  ffte_math.c  ffte_math.h  funcs.h  trigonom_avx.c
src/math/avx/: complex.c
src/math/base/: complex.c
src/math/posix_avx/: complex.c
tests/: dynfix.cpp  fft.cpp  ffte_c.cpp  ffte_c_2d.cpp  ffte_cpp.cpp  ffte_cpp_2d.cpp  ffte_cpp_dynfix.cpp  ffte_cpp_dynfix_2d.cpp  tests.cpp  tests.hpp
tests/imageinput/: README.md
utils/: exectime.c  exectime.h  plot.c  plot.h  pngio.c  pngio.h
